ravisuborg1/ravidevenv/9dd0c8bf-0a27-4293-9442-db5b86a7c07f/kubernates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
  labels:
    app: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  template:
    metadata:
      labels:
        app: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
    spec:
      containers:
        - name: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
          image: ravi8881/85c8a741-63c7-438b-8abe-9fe23efa41e5-ravisuborg1-ravidevenv-9dd0c8bf-0a27-4293-9442-db5b86a7c07f:17.0.0
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr-data-volume
              mountPath: /data # This path is where Solr looks for its cores
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: 9dd0c8bf-0a27-4293-9442-db5b86a7c07f # This name must match the PVC metadata.name
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        fsGroup: 8983
