ravisuborg1/ravidevenv/9dd0c8bf-0a27-4293-9442-db5b86a7c07f/kubernates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-service-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
  labels:
    app: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
spec:
  selector:
    app: solr-4bd7ef21-deca-430e-81c4-f8ae3f003bb6
  ports:
    - port: 80
      targetPort: 8983
      protocol: TCP
  type: ClusterIP
