ravisuborg1/ravidevenv/9dd0c8bf-0a27-4293-9442-db5b86a7c07f/kubernates/solr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress-
  namespace: 85c8a741-63c7-438b-8abe-9fe23efa41e5
  labels:
    app: solr-
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /solr/
            pathType: Prefix
            backend:
              service:
                name: solr-service-
                port:
                  number: 80
